java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint7-hints.pass
Cast ...o to String
FIX_ChangeMethodReturnType Object
